# maestro

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  gestalt.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  render.yaml  tsconfig.base.json
apps/desktop/: .env.example  Cargo.toml  components.json  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package.json  project.json  tauri.conf.json  tsconfig.json  vitest.config.ts
apps/desktop/capabilities/: default.json
apps/desktop/drizzle/: 0000_mature_meteorite.sql
apps/desktop/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/desktop/src/: lib.rs  main.rs
apps/desktop/src/__tests__/: agent-router.test.ts  credential.test.ts  database.test.ts  ipc-channels.test.ts  project-router.test.ts  session-intelligence.test.ts  trpc-router.test.ts  workspace-router.test.ts
apps/desktop/src/commands/: agent.rs  app_state.rs  git.rs  mod.rs  repository.rs  session.rs  workspace.rs
apps/desktop/src/db/: database.ts  mod.rs  schema.ts
apps/desktop/src/handlers/: agent.ts  app-state.ts  dialog.ts  git.ts  index.ts  mcp.ts  repository.ts  session.ts  workspace.ts
apps/desktop/src/main/: auto-updater.ts  deep-link.ts  index.ts  relay-client.ts  splash.html  window-manager.ts
apps/desktop/src/models/: mod.rs
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.tsx  index.html  index.tsx  routeTree.gen.ts
apps/desktop/src/services/: agent-wrapper.ts  app-state-service.ts  chat-oauth-service.ts  config-store.ts  error-logger.ts  (+12 more)
(+230 files in other folders)
