[package]
name = "maestro-desktop"
version = "0.1.0"
description = "Maestro - AI Agent Orchestration Desktop App"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maestro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Async
tokio = { version = "1", features = ["full"] }

# Process management
uuid = { version = "1", features = ["v4"] }

# Git operations
git2 = "0.19"

# Error handling
anyhow = "1"
thiserror = "1"

# Platform dirs
dirs = "5"
